# TinySFML

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  run.bat  run.sh  vcpkg.json
.github/workflows/: main.yml
tinysfml/src/: App.cpp  App.hpp  Core.hpp  EventHandler.cpp  EventHandler.hpp  GameObject.cpp  GameObject.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Logger.cpp  Logger.hpp  SceneIO.cpp  SceneIO.hpp  Window.cpp  Window.hpp  main.cpp  main.hpp
